Fixed All Products rendering products in row that wraps. Also Add to Cart now registers quantity and price as numbers. lastly fixed some RenderHook Issues. Next: Edit/Delete Cart buttons + styling cart

--- a/src/components/style_assets/style.css
+++ b/src/components/style_assets/style.css
@@ -84,6 +84,14 @@ input{
   border: 1px solid black;
 }
 
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+}
+
 .card {
   justify-content: center;
   background-color:white;
